New seeders and migrations

--- a/.env.save
+++ b/.env.save
@@ -3,9 +3,9 @@ APP_DEBUG=false
 APP_KEY=IBMCSQxi86zlYHlRlo8J5m1bCAwLlKaO
 
 DB_HOST=localhost
-DB_DATABASE=follically_feral
-DB_USERNAME=chris
-DB_PASSWORD=10Banana12
+DB_DATABASE=folicallyferal
+DB_USERNAME=root
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
